force-app/main/integration/objects/Integration_Trial_Match__c/Integration_Trial_Match__c.object-meta.xml
<CustomObject>
    <label>Integration Trial Match</label>
    <nameField>
        <displayFormat>ITM-{00000000}</displayFormat>
        <label>Integration Trial Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Trial Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>