force-app/main/integration/objects/Integration_Trial_Match__c/fields/Matched_Date__c.field-meta.xml
<CustomField>
    <fullName>Matched_Date__c</fullName>
    <label>Matched Date</label>
    <type>Date</type>
</CustomField>