force-app/main/integration/objects/Integration_Trial_Match__c/fields/Participant_Enrollment_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment_External_ID__c</fullName>
    <label>Participant Enrollment External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>