force-app/main/integration/objects/Integration_Trial_Match__c/fields/Protocol_Version__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Version__c</fullName>
    <label>Protocol Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>